--- a/posten-website/package.json
+++ b/posten-website/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.1.3",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.4",
+    "frontity-contact-form-7": "^0.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
