--- a/posten-website/package.json
+++ b/posten-website/package.json
@@ -8,7 +8,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.1.3",
+    "axios": "^1.2.0",
+    "cors": "^2.8.5",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.4",
     "frontity-contact-form-7": "^0.1.7",
