--- a/posten-website/.env.development
+++ b/posten-website/.env.development
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL="https://noroffcors.onrender.com/webserverposten.no/JWT-login/wp-json/"
+REACT_APP_BASE_URL="http://localhost/JWT-login/wp-json/"
+REACT_APP_API_URL="http://localhost/JWT-login/wp-json/wp/v2/posts?_embed/"
